// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Barcode scanner does not show the overlay when the user opts out of it 1`] = `
<div
  className="widget-barcode-scanner-container"
>
  <video
    className="video"
    onCanPlay={[Function]}
  />
  <button
    className="btn btn-image btn-icon close-button"
    onClick={[Function]}
  >
    <div
      className="glyphicon glyphicon-remove"
    />
  </button>
</div>
`;

exports[`Barcode scanner shows a loading screen while waiting for the user to give persmission to access the media device 1`] = `
<div
  className="widget-barcode-scanner-container"
>
  <video
    className="video"
    onCanPlay={[Function]}
  />
  <div
    className="video-canvas"
  >
    <div
      className="canvas-left canvas-background"
    />
    <div
      className="canvas-middle"
    >
      <div
        className="canvas-middle-top canvas-background"
      />
      <div
        className="canvas-middle-middle"
      >
        <div
          className="corner corner-top-left"
        />
        <div
          className="corner corner-top-right"
        />
        <div
          className="corner corner-bottom-right"
        />
        <div
          className="corner corner-bottom-left"
        />
      </div>
      <div
        className="canvas-middle-bottom canvas-background"
      />
    </div>
    <div
      className="canvas-right canvas-background"
    />
  </div>
  <button
    className="btn btn-image btn-icon close-button"
    onClick={[Function]}
  >
    <div
      className="glyphicon glyphicon-remove"
    />
  </button>
</div>
`;
